Support Java 9 or later